--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock-Paper-Cissors</title>
-    <meta name="description" content="Rock Paper or Cissors? In this game you will compete with your computer! lets see who's going to win!">
+    <title>Rock-Paper-Scissors</title>
+    <meta name="description" content="Rock Paper or Scissors? In this game you will compete with your computer! lets see who's going to win!">
     <meta name="author" content="Ionathan Sideras">
     <link rel="stylesheet" href="style.css">
     <script src="program.js" ></script>
@@ -13,7 +13,7 @@
 
 <body>
 
-    <h1 class="title" >Rock - Paper - Cissors</h1>
+    <h1 class="title" >Rock - Paper - Scissors</h1>
 
     <div class="flex">
         <h2 id="playerScore">You: 0</h2>
@@ -24,7 +24,7 @@
     <div class="buttons">
         <img src="img/Rock.png" value="Rock">
         <img src="img/Paper.png" value="Paper">
-        <img src="img/Cissors.png" value="Cissors">
+        <img src="img/Scissors.png" value="Scissors">
     </div>
     
     <h3></h3>
