--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="buttons">
         <img src="img/Rock.png" value="Rock">
         <img src="img/Paper.png" value="Paper">
-        <img src="img/Scissors.png" value="Scissors">
+        <img src="img/Cissors.png" value="Scissors">
     </div>
     
     <h3></h3>
