--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Rock Paper or Scissors? In this game you will compete with your computer! lets see who's going to win!">
     <meta name="author" content="Ionathan Sideras">
     <link rel="stylesheet" href="style.css">
-    <script src="program.js" ></script>
+    <script src="program.js" defer></script>
 </head>
 
 <body>
